<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Add Friend</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Add Friend</string>
    <string name="menu_add">Add</string>
    <string name="addfriend">Add Friend</string>
    <string name="menu_home">Home</string>
    <string name="call">Call</string>
    <string name="listnametext">John Doe</string>
    <string name="listdetailtext">This is an example</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="pic">Change Profile Picture</string>

</resources>